# idula

./: .gitignore  .gitmodules  Cargo.toml  Justfile  Makefile  Makefile.toml  README.md  build.zig  gyro.zzz  wapm.toml
.ccls-cache/@@Users@clp@p@z@il/: @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint16_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint32_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint64_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint8_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uintmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@arm@_limits.h.blob  (+106 more)
ci/: README.md  profiles.toml
ci/circleci/: config.yml
cmp/: build.zig
crates/: build.rs
pkg/: build.zig
src/: cli.zig  exec.zig  lang.zig  main.zig  mod.zig  table.zig  token.zig  trait.zig  type.zig  util.zig
src-rs/: lib.rs
(+121 files in other folders)
