[package]
name = "idli"
description = "a development ecosystem"
version = "0.1.1"
edition = "2021"
authors = ["Chris P <clp@clp.is>"]
default-run = "idli"
repository = "https://github.com/clpi/idula.git"
readme = "README.md"
license = "LICENSE.md"
build = "src-rs/build.rs"

[lib]
name = "idli_lib"
path = "src-rs/lib.rs"
doctest = false
test = false


[[bin]]
name = "idli"
path = "src-rs/bin/main.rs"
doctest = false
test = false
bench = false

[[bin]]
name = "idl-sh"
path = "src-rs/bin/sh.rs"
doctest = false
test = false
bench = false

[dependencies]
itertools = "0.10.3"
nom = "7.1.0"
serde = { version = "1.0.133", features = ["derive"]}
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.1"

[workspace]
default-members = [
    "./crates/inet"
]
members = [
    "./crates/*"
]
